@@ -1,3 +1,4 @@
 ifeq ($(subdir),csu)
 aux += init-arch
+gen-as-const-headers += ifunc-defines.sym
 endif
